Revert "test: Transaction date service"
This reverts commit 378fc02061f01749fd2e3a03ccb0a4c5ff8399f0.